2004-08-29  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/geom/Area.java:
	Resynced with GNU Classpath.

	2004-08-27  Sven de Marothy  <sven@physto.se>

        * java/awt/geom/Area.java
        Implemented.

2004-08-28  Alexander Boettcher  <ab764283@os.inf.tu-dresden.de>

	* kaffe/kaffevm/debug.c
	(kaffe_dprintf): Use KWRITE instead of write.

2004-08-27  Helmer Kraemer  <hkraemer@freenet.de>

	* kaffe/kaffevm/support.c: moved libffi related stuff ...

	* config/sysdepCallMethod-ffi.h: ... into this new file

	* kaffe/kaffevm/intrp/methodcalls.c, kaffe/kaffevm/jit/methodcalls.c:
	include sysdepCallMethod-ffi.h if HAVE_LIBFFI is defined

	* config/Makefile.am (noinst_HEADERS): added sysdepCallMethod-ffi.h

	* config/Makefile.in: regenerated 

2004-08-27  Guilhem Lavaux  <guilhem@kaffe.org>

	* configure.ac: Moved AC_CONFIG_SUBDIRS to make configure
	generate the "boehm" directory in any cases.

	* kaffe/kaffevm/boehm-gc/Makefile.am: Removed EXTRA_DIST.

	* libraries/javalib/Makefile.am.in: Added "com" to EXTRA_DIST.

	* libraries/javalib/Makefile.am, libraries/javalib/Makefile.in,
	configure, kaffe/kaffevm/boehm-gc/Makefile.in: Regenerated.

	* kaffe/kaffevm/kaffe-gc/gc-refs.c,
	kaffe/kaffevm/kaffe-gc/gc-refs.h
	(KaffeGC_rmRef): Changed prototype to fix a warning.
	
	* kaffe/kaffevm/kaffe-gc/gc-incremental.c
	(gcman, finman, gc_lock): Initialize explicitly.
	(gcmaned, finmanend): New static locks.
	(markObjectDontCheck): Changed prototype to fix a warning.
	(KaffeGC_WalkConservative): Fixed various warnings.
	(gcGetObjectBase): Added a mutex lock to protect the read access
	to the pointer list.
	(gcMan): Fixed mutex locking logic and some warnings.
	(finaliserMan): Fixed mutex locking logic.
	(gcInvokeGC): Likewise.
	(gcInvokeFinalizer): Likewise.
	(objectSizesAdd): Fixes a warning.
	(gcGetName): New function to report GC name.
	(KGC_Ops): Updated.

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c
	(jthread_create): Fixed a potential warning.
	