@@ -1,5 +1,17 @@
 2004-08-29  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/awt/RenderingHints.java:
+	Resynced with GNU Classpath.
+
+	2004-08-27  David Gilbert  <david.gilbert@object-refinery.com>
+
+        * java/awt/RenderingHints.java: Documented.
+        (RenderingHints): Accept null init Map.
+        (putAll): Preprocess map to generate appropriate exceptions.
+        (remove): Cast object to Key and remove from hintMap.
+
+2004-08-29  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/awt/geom/Area.java:
 	Resynced with GNU Classpath.
 
